2008-03-11  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5903]
	* iconv/iconv_charmap.c (charmap_conversion): Pass name of output file
	not stream for output file.  Open output file here.
	* iconv/iconv_prog.c (process_lock): Take pointer to output stream
	and output file name.
	(process_fd): Likewise.
	(process_file): Likewise.
	(main): Adjust callers of changed functions.
	* iconv/iconv_prog.h: Adjust prototype.

2008-03-09  Andreas Jaeger  <aj@suse.de>

	[BZ #5753]
	* sysdeps/ia64/ieee754.h: Use protected namespace
	__BIG_ENDIAN/__LITTLE_ENDIAN.
	* sysdeps/ieee754/ieee754.h: Likewise.
	Patch by Aurelien Jarno <aurelien@aurel32.net>.

2008-03-08  Roland McGrath  <roland@frob.com>

	* hurd/hurdsig.c (_hurd_internal_post_signal): When normal rules would
	ignore a signal that came from a machine exception, treat it as a
	fatal core-dump signal instead.
	Reported by Samuel Thibault <samuel.thibault@ens-lyon.org>.

	* sysdeps/mach/hurd/i386/trampoline.c (_hurd_setup_sighandler):
	Clear DF bit in thread state's eflags.
	Reported by Samuel Thibault <samuel.thibault@ens-lyon.org>.

2008-03-08  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5774]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Consume closing brace
	of NAN(...) sequence.
	* stdlib/Makefile (tests): Add tst-strtod6.
	* stdlib/tst-strtod6.c: New file.

	* inet/inet6_opt.c (inet6_opt_init): Check extlen for overflow.

	[BZ #5762]
	* posix/getopt.c (_getopt_internal_r): Clarify error message by
	putting offending option character in quotes.  Clean up error
	messages.
	* po/be.po: Adjust msgstr in translation file.
	* po/bg.po: Likewise.
	* po/ca.po: Likewise.
	* po/cs.po: Likewise.
	* po/da.po: Likewise.
	* po/de.po: Likewise.
	* po/es.po: Likewise.
	* po/fr.po: Likewise.
	* po/hr.po: Likewise.
	* po/ko.po: Likewise.
	* po/nl.po: Likewise.
	* po/rw.po: Likewise.
	* po/sk.po: Likewise.
	* po/sv.po: Likewise.
	* po/tr.po: Likewise.
	* po/zh_CN.po: Likewise.
	* po/zh_TW.po: Likewise.

	[BZ #5760]