@@ -61,7 +61,7 @@ extern void _dl_sysinfo_int80 (void) attribute_hidden;
 
 /* The _dl_discover_osversion function is so far only needed in sysconf
    to check for kernels later than 2.6.23.  */
-#if !defined ASSEMBLER && __LINUX_KERNEL_VERSION < 0x020617
+#if !defined __ASSEMBLER__ && __LINUX_KERNEL_VERSION < 0x020617
 /* Get version of the OS.  */
 extern int _dl_discover_osversion (void) attribute_hidden;
 # define HAVE_DL_DISCOVER_OSVERSION	1
