@@ -1,3 +1,8 @@
+2008-03-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/dl-sysdep.h: Use __ASSEMBLER__ instead
+	of ASSEMBLER.
+
 2008-03-11  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #5903]
